--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,14 +16,22 @@ dependencies:
   # https://pub.dev/packages/carousel_slider
   carousel_slider: ^4.2.1
 
+  video_thumbnail: ^0.5.3
+
+  dio: ^5.4.0
+
   flutter:
     sdk: flutter
 
   # https://pub.dev/packages/styled_widget
   flutter_html: 3.0.0-alpha.6
 
+  uuid: ^4.2.1
+
   # https://pub.dev/packages/jiffy
   jiffy: ^6.2.1
+
+  path_provider: ^2.1.1
 
   # https://pub.dev/packages/styled_widget
   styled_widget: ^0.4.1
@@ -33,11 +41,10 @@ dependencies:
     git:
       url: https://github.com/Tevfikbs/swifty_chat_data.git
 
-    
-  media_kit: ^1.1.10+1
-
   # https://pub.dev/packages/url_launcher
   url_launcher: ^6.1.11
+
+  flutter_hooks: ^0.20.3
 
 dev_dependencies:
   # https://pub.dev/packages/flutter_lints
