--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   url_launcher: ^6.2.3
 
   flutter_hooks: ^0.20.3
+  flutter_downloader: ^1.11.6
 
 dev_dependencies:
   # https://pub.dev/packages/flutter_lints
