--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
 
   path_provider: ^2.1.1
 
+    # https://pub.dev/packages/photo_view
+  photo_view: ^0.14.0
+
   # https://pub.dev/packages/styled_widget
   styled_widget: ^0.4.1
 
