--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
     sdk: flutter
 
   # https://pub.dev/packages/styled_widget
-  flutter_html: 3.0.0-alpha.6
+  flutter_html: ^3.0.0-beta.2
 
   uuid: ^4.2.1
 
@@ -49,6 +49,8 @@ dependencies:
 
   flutter_hooks: ^0.20.3
   flutter_downloader: ^1.11.6
+
+  webview_flutter: ^4.7.0
 
 dev_dependencies:
   # https://pub.dev/packages/flutter_lints
