fix: resolve flutter 3.22.2 issues

--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -35,7 +35,7 @@ android {
         jvmTarget = 17
     }
 
-    compileSdkVersion 33
+    compileSdkVersion 34
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
@@ -45,8 +45,8 @@ android {
 
     defaultConfig {
         applicationId "com.eneskaraosman.swiftychat"
-        minSdkVersion 19
-        targetSdkVersion 33
+        minSdkVersion flutter.minSdkVersion
+        targetSdkVersion 34
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
