--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   flutter_downloader: ^1.11.6
 
   webview_flutter: ^4.7.0
+  video_player: ^2.9.0
+  chewie: ^1.8.1
+  audioplayers: ^6.0.0
 
 dev_dependencies:
   # https://pub.dev/packages/flutter_lints
