--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,11 +10,10 @@ repository: https://github.com/EnesKaraosman/swifty_chat
 environment:
   sdk: ">=3.0.1 <4.0.0"
   flutter: ">=3.10.0"
-  
 
 dependencies:
   # https://pub.dev/packages/carousel_slider
-  carousel_slider: ^4.2.1
+  carousel_slider: ^5.0.0
 
   dio: ^5.4.0
 
@@ -29,7 +28,8 @@ dependencies:
   # https://pub.dev/packages/jiffy
   jiffy: ^6.2.1
 
-  path_provider: ^2.1.1
+  path_provider:
+    ^2.1.1
 
     # https://pub.dev/packages/photo_view
   photo_view: ^0.14.0
